[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'


[project]
name = "PySSPFM"
version = "2024.11"
authors = [{ name = "Hugo Valloire, Patrick Quemere", email = "hugovalloire@gmail.com" }]
description = "PySSPFM: A specialized tool for Switching Spectroscopy Piezoresponse Force Microscopy (SSPFM) data processing"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["PySSPFM", "SS-PFM", "C-KPFM", "switching-spectroscopy", "PFM", "AFM",
             "piezoelectric", "ferroelectric", "image", "hysteresis"," nano-loop",
             "piezoresponse", "bruker", "datacube", "spm", "python", "python-library",
             "data-processing", "machine-learning", "k-means", "cross-correlation"]
license = { text = "GPL v3" }
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Environment :: Console',
]
dependencies = [
        "numpy",
        "pandas",
        "openpyxl",
        "matplotlib",
        "Pillow",
        "scipy",
        "lmfit",
        "scikit-learn",
        "nanoscope",
    "pywin32; platform_system == 'Windows'",
]

[project.scripts]
PySSPFM = "PySSPFM.gui.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["PySSPFM*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/CEA-MetroCarac/PySSPFM"
Documentation = "https://github.com/CEA-MetroCarac/PySSPFM/tree/main/doc"

[tool.build]
include = ["PySSPFM/*json", "PySSPFM/*/*json", "PySSPFM/*toml", "PySSPFM/*/*toml", "PySSPFM/*/*png"]
